--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Eveniet praesentium repudiandae architecto vero molestiae.
                     </p>
-                    <a href="./netflix/netflix.html" target="_blank"><i class='bx bx-link-external'></i></a>
+                    <a href="./netflix-clone/index.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
