--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
     <!-- about section design -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="./Images/me2.jpg">
+            <!-- <img src="./Images/me2.jpg"> -->
+
         </div>
 
         <div class="about-content">
@@ -80,6 +81,9 @@
                 Reiciendis facere commodi ut explicabo, a aperiam similique, 
                 recusandae exercitationem id repellendus iste officia dicta inventore? 
                 Eveniet aut hic adipisci dolorem quaerat.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                Deserunt illum accusamus optio aliquid dicta animi ipsam hic vero ut nihil error non distinctio,
+                 voluptates repellat, nisi obcaecati sint, numquam iusto?
             </p>
             <a href="#" class="btn">Read More</a>
         </div>
@@ -212,17 +216,7 @@
                 </div>
             </div>
 
-            <div class="portfolio-box">
-                <img src="./Images/water-droplets carousel.png">
-                <div class="portfolio-layer">
-                    <h4>PROJECT 11</h4>
-                    <p><b>WEBPAGE</b></p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Eveniet praesentium repudiandae architecto vero molestiae.
-                    </p>
-                    <a href="./water-droplets/owl.html" target="_blank"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
+           
 
             
 
