--- a/retailer-panel/Retailer page/retailer.html
+++ b/retailer-panel/Retailer page/retailer.html
@@ -32,7 +32,7 @@
                                     <div class="card-body">
                                         <p class="heading-targets">Today</p>
                                         <div class=" d-flex justify-content-between align-items-center">
-                                            <img src="/1st_number.svg" class="target-no-img" alt="first-target">
+                                            <img src="./Images/1st_number.svg" class="target-no-img" alt="first-target">
                                             <p>
                                                 <span class="title-target">Target</span>
                                                 <br>
@@ -46,7 +46,7 @@
                                             </p>
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <img src="/2nd_number.svg" class="target-no-img" alt="first-target">
+                                            <img src="./Images/2nd_number.svg" class="target-no-img" alt="first-target">
                                             <p>
                                                 <span class="title-target">Target</span>
                                                 <br>
@@ -60,7 +60,7 @@
                                             </p>
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <img src="/3rd_number.svg" class="target-no-img" alt="first-target">
+                                            <img src="./Images/3rd_number.svg" class="target-no-img" alt="first-target">
                                             <p>
                                                 <span class="title-target">Target</span>
                                                 <br>
@@ -82,7 +82,7 @@
                                     <div class="card-body">
                                         <p class="heading-targets">Weekely</p>
                                         <div class=" d-flex justify-content-between align-items-center">
-                                            <img src="/1st_number.svg" class="target-no-img" alt="first-target">
+                                            <img src="./Images/1st_number.svg" class="target-no-img" alt="first-target">
                                             <p>
                                                 <span class="title-target">Target</span>
                                                 <br>
@@ -97,7 +97,7 @@
                                         </div>
                                         <p class="heading-targets pt-4">Monthly</p>
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <img src="/3rd_number.svg" class="target-no-img" alt="first-target">
+                                            <img src="./Images/3rd_number.svg" class="target-no-img" alt="first-target">
                                             <p>
                                                 <span class="title-target">Target</span>
                                                 <br>
@@ -123,7 +123,7 @@
                                     <div class="card-body">
                                         <p class="heading-targets">Today</p>
                                         <div class=" d-flex justify-content-between align-items-center">
-                                            <img src="/1st_number.svg" class="target-no-img" alt="first-target">
+                                            <img src="./Images/1st_number.svg" class="target-no-img" alt="first-target">
                                             <p>
                                                 <span class="title-target">Target</span>
                                                 <br>
@@ -137,7 +137,7 @@
                                             </p>
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <img src="/2nd_number.svg" class="target-no-img" alt="first-target">
+                                            <img src="./Images/2nd_number.svg" class="target-no-img" alt="first-target">
                                             <p>
                                                 <span class="title-target">Target</span>
                                                 <br>
@@ -151,7 +151,7 @@
                                             </p>
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <img src="/3rd_number.svg" class="target-no-img" alt="first-target">
+                                            <img src="./Images/3rd_number.svg" class="target-no-img" alt="first-target">
                                             <p>
                                                 <span class="title-target">Target</span>
                                                 <br>
@@ -173,7 +173,7 @@
                                     <div class="card-body">
                                         <p class="heading-targets">Weekely</p>
                                         <div class=" d-flex justify-content-between align-items-center">
-                                            <img src="/1st_number.svg" class="target-no-img" alt="first-target">
+                                            <img src="./Images/1st_number.svg" class="target-no-img" alt="first-target">
                                             <p>
                                                 <span class="title-target">Target</span>
                                                 <br>
@@ -188,7 +188,7 @@
                                         </div>
                                         <p class="heading-targets pt-4">Monthly</p>
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <img src="/3rd_number.svg" class="target-no-img" alt="first-target">
+                                            <img src="./Images/3rd_number.svg" class="target-no-img" alt="first-target">
                                             <p>
                                                 <span class="title-target">Target</span>
                                                 <br>
@@ -214,7 +214,7 @@
                                     <div class="card-body">
                                         <p class="heading-targets">Today</p>
                                         <div class=" d-flex justify-content-between align-items-center">
-                                            <img src="/1st_number.svg" class="target-no-img" alt="first-target">
+                                            <img src="./Images/1st_number.svg" class="target-no-img" alt="first-target">
                                             <p>
                                                 <span class="title-target">Target</span>
                                                 <br>
@@ -228,7 +228,7 @@
                                             </p>
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <img src="/2nd_number.svg" class="target-no-img" alt="first-target">
+                                            <img src="./Images/2nd_number.svg" class="target-no-img" alt="first-target">
                                             <p>
                                                 <span class="title-target">Target</span>
                                                 <br>
@@ -242,7 +242,7 @@
                                             </p>
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <img src="/3rd_number.svg" class="target-no-img" alt="first-target">
+                                            <img src="./Images/3rd_number.svg" class="target-no-img" alt="first-target">
                                             <p><span class="title-target">Target</span><br>
                                                 40k</p>
                                             <input type="range" min="1" max="100" value="59" class="input-range">
@@ -258,7 +258,7 @@
                                     <div class="card-body">
                                         <p class="heading-targets">Weekely</p>
                                         <div class=" d-flex justify-content-between align-items-center">
-                                            <img src="/1st_number.svg" class="target-no-img" alt="first-target">
+                                            <img src="./Images/1st_number.svg" class="target-no-img" alt="first-target">
                                             <p><span class="title-target">Target</span><br>
                                                 90k</p>
                                             <input type="range" min="1" max="100" value="59" class="input-range">
@@ -267,7 +267,7 @@
                                         </div>
                                         <p clss="heading-targets pt-4">Monthly</p>
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <img src="/3rd_number.svg" class="target-no-img" alt="first-target">
+                                            <img src="./Images/3rd_number.svg" class="target-no-img" alt="first-target">
                                             <p><span class="title-target">Target</span><br>
                                                 40k</p>
                                             <input type="range" min="1" max="100" value="59" class="input-range">
@@ -286,7 +286,7 @@
                                     <div class="card-body">
                                         <p class="heading-targets">Today</p>
                                         <div class=" d-flex justify-content-between align-items-center">
-                                            <img src="/1st_number.svg" class="target-no-img" alt="first-target">
+                                            <img src="./Images/1st_number.svg" class="target-no-img" alt="first-target">
                                             <p><span class="title-target">Target</span><br>
                                                 90k</p>
                                             <input type="range" min="1" max="100" value="59" class="input-range">
@@ -294,7 +294,7 @@
                                                 300</p>
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <img src="/2nd_number.svg" class="target-no-img" alt="first-target">
+                                            <img src="./Images/2nd_number.svg" class="target-no-img" alt="first-target">
                                             <p><span class="title-target">Target</span><br>
                                                 60k</p>
                                             <input type="range" min="1" max="100" value="59" class="input-range">
@@ -302,7 +302,7 @@
                                                 90k</p>
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <img src="/3rd_number.svg" class="target-no-img" alt="first-target">
+                                            <img src="./Images/3rd_number.svg" class="target-no-img" alt="first-target">
                                             <p><span class="title-target">Target</span><br>
                                                 40k</p>
                                             <input type="range" min="1" max="100" value="59" class="input-range">
@@ -312,13 +312,13 @@
                                     </div>
                                 </div>
                             </div>
-        <!--  -->
+                            <!--  -->
                             <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 customBg">
                                 <div class="card card-target-service overflow-hidden">
                                     <div class="card-body">
                                         <p class="heading-targets">Weekely</p>
                                         <div class=" d-flex justify-content-between align-items-center">
-                                            <img src="/1st_number.svg" class="target-no-img" alt="first-target">
+                                            <img src="./Images/1st_number.svg" class="target-no-img" alt="first-target">
                                             <p><span class="title-target">Target</span><br>
                                                 90k</p>
                                             <input type="range" min="1" max="100" value="59" class="input-range">
@@ -327,7 +327,7 @@
                                         </div>
                                         <p clss="heading-targets pt-4">Monthly</p>
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <img src="/3rd_number.svg" class="target-no-img" alt="first-target">
+                                            <img src="./Images/3rd_number.svg" class="target-no-img" alt="first-target">
                                             <p><span class="title-target">Target</span><br>
                                                 40k</p>
                                             <input type="range" min="1" max="100" value="59" class="input-range">
