--- a/csr-designs/index.html
+++ b/csr-designs/index.html
@@ -59,7 +59,7 @@
                     <div class="d-flex flex-row justify-content-start" style="padding: 0; margin: 0; height: 60px;">
                         <img src="./Images/globe.png" height="50px" width="50px" style="margin-top: 0;">
                         <div class="logo_text_content">
-                            <p style="font-size: 35px; margin: 0; padding: 0; height: 35px; color: white; letter-spacing: 6px;">Cybdeer</p>
+                            <p style="font-size: 35px; margin: 0; padding: 0; height: 35px; color: white; letter-spacing: 6px;">CSR</p>
                             <p style="font-size: 12px; margin: 0; margin-top: 2px; padding: 0; height: 12px; color: white; letter-spacing: 2px;"></p>
                             <p></p>
                         </div>
@@ -134,9 +134,10 @@
                         <div class="container">
                             <h2 class="animate__animated animate__fadeInDown">We are Developers</h2>
                             <p class="animate__animated animate__fadeInUp">
-                                CRS IT SOLUTIONS has a team of highly skilled and experienced web developers who specialize in creating unique, visually appealing, and user-friendly websites. 
-                                The company offers web development services across various platforms, including WordPress, Drupal, Joomla, Magento, and others. 
-                                CRS IT SOLUTIONS takes pride in delivering customized web solutions that meet the specific needs of clients, whether it's a simple website or a complex e-commerce platform.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Ea ratione impedit omnis ipsum natus error blanditiis, facilis esse, facere deleniti praesentium? 
+                                Unde iusto fuga similique, libero a, cupiditate aperiam quo error minima quasi blanditiis quisquam 
+                                nemo debitis accusantium itaque mollitia repellat, temporibus nesciunt atque aliquam. 
                             </p>
                             <a href="" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
                         </div>
@@ -147,9 +148,10 @@
                         <div class="container">
                             <h2 class="animate__animated animate__fadeInDown">We are SEOs</h2>
                             <p class="animate__animated animate__fadeInUp">
-                                CRS IT SOLUTIONS offers a range of SEO services that help businesses increase their online visibility and attract more visitors to their website. 
-                                The company's SEO experts utilize cutting-edge tools and techniques to optimize websites for search engines and improve their ranking on search engine results pages. 
-                                CRS IT SOLUTIONS offers both on-page and off-page SEO services to help clients achieve their digital marketing goals.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Ea ratione impedit omnis ipsum natus error blanditiis, facilis esse, facere deleniti praesentium? 
+                                Unde iusto fuga similique, libero a, cupiditate aperiam quo error minima quasi blanditiis quisquam 
+                                nemo debitis accusantium itaque mollitia repellat, temporibus nesciunt atque aliquam. 
                             </p>
                             <a href="" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
                         </div>
@@ -160,10 +162,10 @@
                         <div class="container">
                             <h2 class="animate__animated animate__fadeInDown">We are Trainers</h2>
                             <p class="animate__animated animate__fadeInUp">
-                                CRS IT SOLUTIONS provides IT training services that help individuals and businesses enhance their knowledge and skills in various areas of IT. 
-                                The company's training programs cover topics such as web development, SEO, digital marketing, cybersecurity, and more. 
-                                CRS IT SOLUTIONS training is delivered by industry experts who have years of experience and are committed to helping students achieve their career goals. 
-                                The company offers both online and offline training programs to cater to the needs of students.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Ea ratione impedit omnis ipsum natus error blanditiis, facilis esse, facere deleniti praesentium? 
+                                Unde iusto fuga similique, libero a, cupiditate aperiam quo error minima quasi blanditiis quisquam 
+                                nemo debitis accusantium itaque mollitia repellat, temporibus nesciunt atque aliquam. 
                             </p>
                             <a href="" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
                         </div>
@@ -174,8 +176,10 @@
                         <div class="container">
                             <h2 class="animate__animated animate__fadeInDown">You are at Right Place</h2>
                             <p class="animate__animated animate__fadeInUp">
-                                CRS IT SOLUTIONS is a top-rated startup company that provides exceptional services in web development, SEO, IT training, and internships. 
-                                The company's commitment to excellence and customer satisfaction has made it the go-to choice for businesses and individuals looking to succeed in today's digital world.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Ea ratione impedit omnis ipsum natus error blanditiis, facilis esse, facere deleniti praesentium? 
+                                Unde iusto fuga similique, libero a, cupiditate aperiam quo error minima quasi blanditiis quisquam 
+                                nemo debitis accusantium itaque mollitia repellat, temporibus nesciunt atque aliquam. 
                             </p>
                             <a href="" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
                         </div>
@@ -203,12 +207,12 @@
             </div>
             <div class="col-lg-6 order-2 order-lg-1 content border border-2 shadow aos-animate" style="border-radius: 33px 0px 33px 0px;" data-aos="fade-right">
                 <div class="d-flex flex-row justify-content-center">
-                    <h3 class="d-inline fw-bold ms-2 moving_text" style="color: #181a46;">CRS IT SOLUTIONS</h3>
+                    <h3 class="d-inline fw-bold ms-2 moving_text" style="color: #181a46;">CSR SOLUTIONS</h3>
                 </div>
                 <hr>
                 <p class="fst-italic fw-bold" style="color: #181a46;">Web Designing, Web Development, Application Development, Search Engine Optimization and Training & Internship.</p>
                 <p></p>
-                <h5 class="fw-bold d-inline"> CRS IT SOLUTIONS</h5>
+                <h5 class="fw-bold d-inline"> CSR SOLUTIONS</h5>
                 &nbsp; is a firm that specializes in Web Development, Application development and Search Engine Optimization.
                 We offer a wide range of high quality services in the development, delivery and maintenance of the software. We are based in Bangalore.
                 <p></p>
@@ -296,7 +300,7 @@
         <header class="section-header">
             <h3 style="color: #0d0324;">What difference us.</h3>
             <p style="color: #0d0324;">
-                CRS IT SOLUTIONS is one of the prominent software companies that helps other organizations to transform into digital enterprises. 
+                CSR SOLUTIONS is one of the prominent software companies that helps other organizations to transform into digital enterprises. 
                 It differentiates you from competitors in the market and provides better engagement with customers, partners and employees.
             </p>
         </header>
@@ -484,7 +488,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6 footer-info">
-                    <h3>Cybdeer</h3>
+                    <h3>CSR</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit debitis mollitia.</p>
                 </div>
                 <div class="col-lg-3 col-md-6 footer-links">
@@ -523,7 +527,7 @@
                         +91-9334840924
                         <br>
                         <strong>Email:</strong>
-                        cybdeer@gmail.com
+                        csr@gmail.com
                     </p>
                     <div class="social-links">
                         <a href="" class="twitter"><i class="fa-brands fa-twitter"></i></a>
