--- a/csr-designs/seo.html
+++ b/csr-designs/seo.html
@@ -59,7 +59,7 @@
                         <div class="d-flex flex-row justify-content-start" style="padding: 0; margin: 0; height: 60px;">
                             <img src="./Images/globe.png" height="50px" width="50px" style="margin-top: 0;">
                             <div class="logo_text_content">
-                                <p style="font-size: 35px; margin: 0; padding: 0; height: 35px; color: white; letter-spacing: 6px;">Cybdeer</p>
+                                <p style="font-size: 35px; margin: 0; padding: 0; height: 35px; color: white; letter-spacing: 6px;">CSR</p>
                                 <p style="font-size: 12px; margin: 0; margin-top: 2px; padding: 0; height: 12px; color: white; letter-spacing: 2px;"></p>
                                 <p></p>
                             </div>
