--- a/food-blog/project1.html
+++ b/food-blog/project1.html
@@ -20,7 +20,7 @@
 		<nav class="navbar navbar-expand-lg navigation-wrap">
 			<div class="container">
 			  <a class="navbar-brand" href="#"><img src="./Images/logo-black.png"></a>
-			  <a class="navbar-brand" href="#"><img src="./Images/logo-white.png"></a>
+			  <!-- <a class="navbar-brand" href="#"><img src="./Images/logo-white.png"></a> -->
 			  
 			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 				<i class="fas fa-bars navbar-toggler-icon"></i> 
