added-social-links

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
             </p>
             <div class="social-media">
                 <a href="#" class="facebook"><i class='bx bxl-facebook'></i></a>
-                <a href="#" class="insta"><i class='bx bxl-instagram'></i></a>
-                <a href="#" class="twitter"><i class='bx bxl-twitter'></i></a>
-                <a href="#" class="linkedin"><i class='bx bxl-linkedin' ></i></a>
+                <a href="https://www.instagram.com/kashyap_2423/" class="insta"><i class='bx bxl-instagram'></i></a>
+                <a href="https://twitter.com/bhawwnaa23" class="twitter"><i class='bx bxl-twitter'></i></a>
+                <a href="https://www.linkedin.com/in/bhawna-3bb836250/" class="linkedin"><i class='bx bxl-linkedin' ></i></a>
             </div>
             <a href="#" class="btn">Download CV</a>
         </div>
