--- a/index.html
+++ b/index.html
@@ -47,10 +47,9 @@
             <h1>Bhawna</h1>
             <!-- <h3>And I'm a <span>Frontend Developer</span></h3> -->
             <h3>And I'm a <span class="multiple-text"></span></h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Praesentium natus culpa animi tempore debitis obcaecati! 
-                Sit magnam nulla repudiandae? 
-                Dolorum, obcaecati ipsa soluta natus blanditiis cumque placeat ut quo voluptates.
+            <p>Looking for a challenging role in a reputable organization to utilize my technical 
+                skills for the growth of the organization as well as to enhance my knowledge about new 
+                and emerging trends in the sector.
             </p>
             <div class="social-media">
                 <a href="#" class="facebook"><i class='bx bxl-facebook'></i></a>
@@ -76,14 +75,14 @@
 
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
-            <h3>Frontend Developer!</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Reiciendis facere commodi ut explicabo, a aperiam similique, 
-                recusandae exercitationem id repellendus iste officia dicta inventore? 
-                Eveniet aut hic adipisci dolorem quaerat.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                Deserunt illum accusamus optio aliquid dicta animi ipsam hic vero ut nihil error non distinctio,
-                 voluptates repellat, nisi obcaecati sint, numquam iusto?
+            <h3>Web Developer!</h3>
+            <p>Innovative Web Developer with 6 month of experience building
+                and maintaining responsive websites in the Fintech Industry.
+                Proficient in <b>HTML5, CSS3, JavaScript, React JS </b> Plus
+                modern libraries and frameworks.
+                <br>
+                Passionate and tech enthusiastic and result oriented mindset, 
+                searching for an organisation where I can enhance my knowledge and technical skills.
             </p>
             <a href="#" class="btn">Read More</a>
         </div>
