--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <a href="https://twitter.com/bhawwnaa23" class="twitter"><i class='bx bxl-twitter'></i></a>
                 <a href="https://www.linkedin.com/in/bhawna-3bb836250/" class="linkedin"><i class='bx bxl-linkedin' ></i></a>
             </div>
-            <a href="#" class="btn">Download CV</a>
+            <a href="./Resume/Bhawna-resume.pdf" class="btn">Download CV</a>
         </div>
 
         <div class="home-img">
