--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
                 <div class="portfolio-layer">
                     <h4>PROJECT 1</h4>
                     <p><b>WEBSITE</b></p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Eveniet praesentium repudiandae architecto vero molestiae.
-                    </p>
+                    </p> -->
                     <a href="./csr-designs/index.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -112,9 +112,9 @@
                 <div class="portfolio-layer">
                     <h4>PROJECT 2</h4>
                     <p><b>WEBPAGE</b></p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Eveniet praesentium repudiandae architecto vero molestiae.
-                    </p>
+                    </p> -->
                     <a href="./food-blog/project1.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -124,9 +124,9 @@
                 <div class="portfolio-layer">
                     <h4>PROJECT 3</h4>
                     <p><b>WEBSITE</b></p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Eveniet praesentium repudiandae architecto vero molestiae.
-                    </p>
+                    </p> -->
                     <a href="./logis/new.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -136,9 +136,9 @@
                 <div class="portfolio-layer">
                     <h4>PROJECT 4</h4>
                     <p><b>WEBSITE</b></p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Eveniet praesentium repudiandae architecto vero molestiae.
-                    </p>
+                    </p> -->
                     <a href="./podtalks-form/podtalks.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -148,9 +148,9 @@
                 <div class="portfolio-layer">
                     <h4>PROJECT 5</h4>
                     <p><b>WEBPAGE</b></p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Eveniet praesentium repudiandae architecto vero molestiae.
-                    </p>
+                    </p> -->
                     <a href="./sahara-slide/practice2.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -160,9 +160,9 @@
                 <div class="portfolio-layer">
                     <h4>PROJECT 6</h4>
                     <p><b>WEBPAGE</b></p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Eveniet praesentium repudiandae architecto vero molestiae.
-                    </p>
+                    </p> -->
                     <a href="./qr-code/code1.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -172,9 +172,9 @@
                 <div class="portfolio-layer">
                     <h4>PROJECT 7</h4>
                     <p><b>WEBPAGE</b></p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Eveniet praesentium repudiandae architecto vero molestiae.
-                    </p>
+                    </p> -->
                     <a href="./netflix-clone/index.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -184,9 +184,9 @@
                 <div class="portfolio-layer">
                     <h4>PROJECT 8</h4>
                     <p><b>WEBPAGE</b></p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Eveniet praesentium repudiandae architecto vero molestiae.
-                    </p>
+                    </p> -->
                     <a href="./adventure/practice1.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -196,9 +196,9 @@
                 <div class="portfolio-layer">
                     <h4>PROJECT 9</h4>
                     <p><b>WEBPAGE</b></p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Eveniet praesentium repudiandae architecto vero molestiae.
-                    </p>
+                    </p> -->
                     <a href="./digimedia/new.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -208,9 +208,9 @@
                 <div class="portfolio-layer">
                     <h4>PROJECT 10</h4>
                     <p><b>WEBPAGE</b></p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Eveniet praesentium repudiandae architecto vero molestiae.
-                    </p>
+                    </p> -->
                     <a href="./retailer-panel/Retailer page/retailer.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
