--- a/index.html
+++ b/index.html
@@ -167,22 +167,22 @@
                 </div>
             </div>
 
-            <div class="portfolio-box">
+            <!-- <div class="portfolio-box">
                 <img src="./Images/netflix-background.jpeg">
                 <div class="portfolio-layer">
                     <h4>PROJECT 7</h4>
-                    <p><b>WEBPAGE</b></p>
+                    <p><b>WEBPAGE</b></p> -->
                     <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Eveniet praesentium repudiandae architecto vero molestiae.
                     </p> -->
-                    <a href="./netflix-clone/index.html" target="_blank"><i class='bx bx-link-external'></i></a>
+                    <!-- <a href="./netflix-clone/index.html" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
-            </div>
+            </div> -->
 
             <div class="portfolio-box">
                 <img src="./Images/Adventure.jpg">
                 <div class="portfolio-layer">
-                    <h4>PROJECT 8</h4>
+                    <h4>PROJECT 7</h4>
                     <p><b>WEBPAGE</b></p>
                     <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Eveniet praesentium repudiandae architecto vero molestiae.
@@ -194,7 +194,7 @@
             <div class="portfolio-box">
                 <img src="./Images/digi-media.jpg">
                 <div class="portfolio-layer">
-                    <h4>PROJECT 9</h4>
+                    <h4>PROJECT 8</h4>
                     <p><b>WEBPAGE</b></p>
                     <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Eveniet praesentium repudiandae architecto vero molestiae.
@@ -206,7 +206,7 @@
             <div class="portfolio-box">
                 <img src="./Images/retailer-panel.png">
                 <div class="portfolio-layer">
-                    <h4>PROJECT 10</h4>
+                    <h4>PROJECT 9</h4>
                     <p><b>WEBPAGE</b></p>
                     <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Eveniet praesentium repudiandae architecto vero molestiae.
